// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Client new instance should create http client based on production Surix API url 1`] = `
Array [
  Array [
    "https://api.surix.co/api",
  ],
]
`;

exports[`Client new instance should override baseUrl if baseUrl option is provided 1`] = `
Array [
  Array [
    "http://mydomain.com/api",
  ],
]
`;

exports[`Client new instance when environment is not set to production should create http client based on staging url 1`] = `
Array [
  Array [
    "https://surix-staging.herokuapp.com/api",
  ],
]
`;
